# spreadsheet

./: .gitignore  CMakeLists.txt  Makefile  console  expression.cpp  expression.hpp  expression_core.hpp  file_test.csv  grammar_rules  jegyzet  main  main.cpp  parser.cpp  parser.hpp  proba.csv  proba2.csv  proba3.csv  sheet.cpp  sheet.hpp  test  test.cpp  token.cpp  token.hpp  ui.cpp
dokumentacio/: doxy-config
srcs/: console.cpp  console.hpp  exceptions.hpp  expression.cpp  expression.hpp  expression_core.hpp  main.cpp  parser.cpp  parser.hpp  sheet.cpp  sheet.hpp  test.cpp  token.cpp  token.hpp
srcs/expressions/: cell.cpp  cell.hpp  expression.hpp  expression_core.hpp  functions.cpp  functions.hpp  operators.cpp  operators.hpp  range.cpp  range.hpp
